10/27 Updated OptionEntry to support more basic value types. Now, MineLadderOptionScreen is an instance of codec_config_lib usage, but it works a lot to impl the lib: details can be seen in comments.